refactor: 예외처리 로직 단순화 및 불필요한 코드 제거
- GlobalExceptionHandler에서 복잡한 보안 로깅 로직 제거
- ErrorResponse에서 Rate Limiting 전용 필드 제거
- 기본적인 예외처리만 유지하여 코드 복잡도 감소
- 불필요한 의존성 및 어노테이션 정리